# c-huffman

./: .gitignore  huff.c  meson.build
src/: b_heap.c  b_heap.h  bitstream.c  bitstream.h  h_tree.c  h_tree.h  huff.c
tests/: bitstream.test.c
